--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Conceptual Page</title>
-    <link rel="stylesheet" href="styles/styles.css"/>
+    <title>Our conceptual page</title>
+     <link ref="stylesheet" href="styles/styles.css>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello world</h1>  
     
 </body>
 </html>
